--- a/src/scss/sections/_main-banner.scss
+++ b/src/scss/sections/_main-banner.scss
@@ -4,7 +4,8 @@
 
 //==========================================================================================================================================================
 .main-banner {
-	margin-top: 120px;
+	margin-top: 105px;
+	padding-bottom: 20px;
 	// .main-banner__bg
 	&__bg {
 		z-index: -1;
@@ -32,7 +33,8 @@
 		font-weight: 600;
 		// font-size: rem(402);
 		font-size: calc(100vw / (1920 / 405));
-		line-height: 1;
+		// line-height: 1;
+		line-height: normal;
 		letter-spacing: -0.1em;
 		text-transform: uppercase;
 		text-align: center;
@@ -44,18 +46,68 @@
 	}
 	// .main-banner__top
 	&__top {
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		top: -45px;
 	}
 	// .main-banner__quote
 	&__quote {
+		flex: 0 1 410px;
+		&:nth-child(1) {
+			text-align: left;
+			.main-banner__quote-author {
+				display: flex;
+				column-gap: 10px;
+				justify-content: flex-start;
+				align-items: stretch;
+				&::before {
+					content: '';
+					display: block;
+					width: 17px;
+					height: 11px;
+					background-image: url('/icons/quote-icon.svg');
+				}
+			}
+		}
+		&:nth-child(2) {
+			text-align: right;
+			.main-banner__quote-author {
+				display: flex;
+				column-gap: 10px;
+				justify-content: flex-end;
+				align-items: stretch;
+				&::after {
+					content: '';
+					display: block;
+					width: 17px;
+					height: 11px;
+					background-image: url('/icons/quote-icon.svg');
+				}
+			}
+		}
 	}
 	// .main-banner__quote-text
 	&__quote-text {
+		font-size: rem(22);
+		line-height: 100%;
+		letter-spacing: -0.03em;
+		text-transform: uppercase;
+		color: $color-white;
+		margin-bottom: 10px;
 	}
 	// .main-banner__quote-author
 	&__quote-author {
+		line-height: 100%;
+		letter-spacing: -0.03em;
+		text-transform: uppercase;
+		color: $color-grey;
 	}
 	// .main-banner__content
 	&__content {
+		position: absolute;
+		top: -105px;
 	}
 	// .main-banner__center
 	&__center {
@@ -68,15 +120,39 @@
 	}
 	// .main-banner__bottom
 	&__bottom {
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		padding-bottom: 20px;
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			display: block;
+			width: 100%;
+			height: 1px;
+			background-color: $color-white;
+			background: linear-gradient(
+				90deg,
+				rgba(255, 255, 255, 0) 0%,
+				rgba(255, 255, 255, 0.2) 5%,
+				rgba(255, 255, 255, 0.2) 91%,
+				rgba(255, 255, 255, 0) 100%
+			);
+		}
 	}
 	// .main-banner__bottom-item
 	&__bottom-item {
+		&:nth-child(1) {
+			flex: 0 1 522px;
+		}
+		&:nth-child(2) {
+			flex: 0 1 540px;
+		}
 	}
 }
-.section-bg {
-}
-.container {
-}
+
 .delivery-company {
 	// .delivery-company__line
 	&__line {
@@ -111,26 +187,83 @@
 .why-us {
 	// .why-us__descr
 	&__descr {
+		display: flex;
+		align-items: stretch;
+		column-gap: 10px;
+		font-size: rem(20);
+		line-height: 100%;
+		letter-spacing: -0.03em;
+		text-transform: uppercase;
+		color: $color-grey;
+		margin-bottom: 10px;
+		&::before {
+			content: '';
+			display: block;
+			width: 16px;
+			height: 18px;
+			background-image: url('/icons/why-us-icon.svg');
+		}
 	}
 	// .why-us__text
 	&__text {
+		font-size: rem(48);
+		line-height: 100%;
+		letter-spacing: -0.03em;
+		text-transform: uppercase;
+		color: $color-white;
 	}
 	// .why-us__text--white
 	&__text--white {
+		font-weight: 600;
 	}
 }
 .leading-way {
+	display: flex;
+	justify-content: space-between;
+	padding: 20px 20px 0 20px;
+	border: 1px solid rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+	backdrop-filter: blur(20px);
+	background: rgba(255, 255, 255, 0.01);
 	// .leading-way__col
 	&__col {
+		flex: 0 1 246px;
 	}
 	// .leading-way__text
 	&__text {
+		font-weight: 500;
+		font-size: rem(26);
+		line-height: 100%;
+		text-transform: uppercase;
+		color: $color-white;
+		margin-bottom: 10px;
 	}
 	// .leading-way__descr
 	&__descr {
+		font-weight: 400;
+		font-size: rem(15);
+		line-height: 120%;
+		color: $color-grey;
 	}
 	// .leading-way__count
 	&__count {
+		display: flex;
+		column-gap: 10px;
+		align-items: center;
+		font-weight: 300;
+		font-size: rem(80);
+		line-height: 120%;
+		text-transform: uppercase;
+		color: $color-white;
+		&::after {
+			content: '';
+			position: relative;
+			transform: translateY(-50%);
+			display: block;
+			width: 23px;
+			height: 20px;
+			background-image: url('/public/icons/leading-way-icon.svg');
+		}
 	}
 }
 
