--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -87,6 +87,7 @@
 	// .header__btns
 	&__btns {
 		display: flex;
+		align-items: center;
 		column-gap: 10px;
 	}
 	// .header__login-btn
@@ -104,9 +105,39 @@
 	}
 	// .header__burger-btn
 	&__burger-btn {
+		position: relative;
+		display: none;
+		flex-direction: column;
+		align-items: flex-end;
+		row-gap: 4px;
+		width: 25px;
+		height: 8px;
+		&.active {
+			span {
+				position: absolute;
+				&:nth-child(1) {
+					top: calc(50% - rem(1));
+					transform: rotate(-45deg);
+				}
+				&:nth-child(2) {
+					width: 25px;
+					top: calc(50% - rem(1));
+					transform: rotate(45deg);
+				}
+			}
+		}
 	}
 	// .header__burger-line
 	&__burger-line {
+		display: block;
+		width: 25px;
+		height: 2px;
+		border-radius: 5px;
+		background-color: $color-white;
+		transition: transform 0.3s ease;
+		&:nth-child(2) {
+			width: 15px;
+		}
 	}
 }
 .menu-item--active.menu-item--active {
