add mobile adaptive

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $color-white-muted-2: rgba(255, 255, 255, 0.1);
 
 $color-black: #000;
 $color-body-bg: #030303;
+$color-overlay-bg: #06101e;
 
 $color-grey: #80858d;
 
