--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -49,6 +49,23 @@ body {
 	height: 100%;
 }
 
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: $color-overlay-bg;
+	opacity: 0;
+	visibility: hidden;
+	z-index: 10;
+	transition: 0.3s ease-in-out;
+	&.active {
+		opacity: 0.95;
+		visibility: visible;
+	}
+}
+
 //==========================================================================================================================================================
 // Адаптив контейнера
 @media (max-width: 1199.98px) {
@@ -73,6 +90,7 @@ body {
 @media (max-width: 575.98px) {
 	.container {
 		// max-width: 100%;
+		padding: 0 10px;
 	}
 }
 
