--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -9,7 +9,7 @@
 	left: 20px;
 	right: 20px;
 	max-width: 100%;
-	height: 60px;
+	// height: 60px;
 	z-index: 30;
 	// header__container
 	&__container {
@@ -23,7 +23,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		height: 100%;
+		height: 60px;
 	}
 	// .header__logo
 	&__logo {
@@ -41,6 +41,9 @@
 		display: flex;
 		column-gap: 35px;
 		height: 100%;
+		.header__menu-btns {
+			display: none;
+		}
 	}
 	// .header__menu-item
 	&__menu-item.header__menu-item {
@@ -157,5 +160,76 @@
 	}
 	// .callback-btn__img
 	&__img {
+	}
+}
+
+//==========================================================================================================================================================
+// Адаптив
+@media (max-width: 768px) {
+	.header {
+		top: 10px;
+		left: 10px;
+		right: 10px;
+	}
+	.header__menu {
+		position: absolute;
+		top: 70px;
+		right: 0;
+		flex-direction: column;
+		row-gap: 5px;
+		max-width: 300px;
+		width: 100%;
+		min-width: 290px;
+		height: auto;
+		padding: 10px 0px 20px 0px;
+		border: 1px solid $color-white-muted;
+		border-radius: 5px;
+		backdrop-filter: blur(20px);
+		background-color: $color-header-bg;
+		transform: translate(100%);
+		opacity: 0;
+		visibility: hidden;
+		z-index: 20;
+		transition: 0.3s ease-in-out;
+
+		&.open {
+			opacity: 1;
+			visibility: visible;
+			transform: translate(0);
+		}
+		.header__menu-btns {
+			margin-top: 15px;
+			display: flex;
+			flex-direction: column;
+			row-gap: 5px;
+			padding: 0 20px;
+			.header__login-btn,
+			.header__callback-btn {
+				justify-content: center;
+				max-width: 100%;
+			}
+			.header__login-btn {
+				height: 34px;
+			}
+		}
+		.header__menu-item {
+			display: flex;
+			align-items: center;
+			height: 32px;
+			padding: 5px 20px 5px 20px;
+			&::after {
+				top: 0;
+				left: 0;
+				width: 2px;
+				height: 100%;
+			}
+		}
+	}
+
+	.header__burger-btn {
+		display: flex;
+	}
+	.header__btns {
+		display: none;
 	}
 }
