add swiper slider

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,6 +3,7 @@
 $color-white: #fff;
 $color-white-muted: rgba(255, 255, 255, 0.08);
 $color-white-muted-2: rgba(255, 255, 255, 0.1);
+$color-white-muted-3: rgba(255, 255, 255, 0.2);
 
 $color-black: #000;
 $color-body-bg: #030303;
